--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -42,6 +42,7 @@ jobs:
                   cat tmp/code-coverage/merged/coverage-details.md >> $GITHUB_STEP_SUMMARY
             - name: Coverage Diff
               uses: greatwizard/coverage-diff-action@v1
+              if: always()
               with:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
                   coverage-filename: tmp/code-coverage/merged/coverage-summary.json
