--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -41,7 +41,8 @@ jobs:
                   cat tmp/code-coverage/merged/coverage-summary.md >> $GITHUB_STEP_SUMMARY
                   cat tmp/code-coverage/merged/coverage-details.md >> $GITHUB_STEP_SUMMARY
             - name: Coverage Diff
-              uses: greatwizard/coverage-diff-action@v1
+              uses: bultkrantz/coverage-diff-action@v5
+              if: always()
               with:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
                   coverage-filename: tmp/code-coverage/merged/coverage-summary.json
