--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@mantine/modals": "^7.16",
         "@mantine/notifications": "^7.16",
         "@mantinex/dev-icons": "^1.1.0",
+        "@phosphor-icons/react": "^2.1.7",
         "@sentry/nextjs": "^8.54.0",
         "@tabler/icons-react": "^3.29.0",
         "@tanstack/react-query": "^5.66.0",
