--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dependencies": {
         "@aws-sdk/client-ecr": "^3.721.0",
         "@aws-sdk/client-s3": "^3.722.0",
+        "@aws-sdk/client-secrets-manager": "^3.750.0",
         "@aws-sdk/credential-provider-ini": "^3.721.0",
         "@aws-sdk/lib-storage": "^3.722.0",
         "@aws-sdk/s3-presigned-post": "^3.697.0",
@@ -52,7 +53,6 @@
         "@types/papaparse": "^5.3.15",
         "@types/uuid": "^10.0.0",
         "aws-iam-policy-types": "^1.0.1",
-        "aws-sdk": "^2.1692.0",
         "child_process": "^1.0.2",
         "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
