--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@tanstack/react-query": "^5.66.7",
         "@types/jsonwebtoken": "^9.0.8",
         "@types/papaparse": "^5.3.15",
+        "@types/qrcode.react": "^1.0.5",
         "@types/uuid": "^10.0.0",
         "aws-iam-policy-types": "^1.0.1",
         "aws-sdk": "^2.1692.0",
