--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -38,14 +38,14 @@ jobs:
               run: docker compose exec mgmnt-app npm run ci
             - name: Add code coverage to actions summary
               run: |
-                  cat tests/coverage/code-coverage/merged/coverage-summary.md >> $GITHUB_STEP_SUMMARY
-                  cat tests/coverage/code-coverage/merged/coverage-details.md >> $GITHUB_STEP_SUMMARY
+                  cat test-results/coverage/coverage-summary.md >> $GITHUB_STEP_SUMMARY
+                  cat test-results/coverage/coverage-details.md >> $GITHUB_STEP_SUMMARY
             - name: Coverage Diff
               uses: bultkrantz/coverage-diff-action@v5.0.1
               with:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
                   base-summary-filename: base-summary.json
-                  coverage-filename: ./tests/coverage/code-coverage/merged/coverage-summary.json
+                  coverage-filename: test-results/coverage/coverage-summary.json
             - name: Test build
               run: |
                   echo NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }} > .env
@@ -57,5 +57,5 @@ jobs:
               if: failure()
               with:
                   name: playwright-report
-                  path: tmp/test-results/e2e
+                  path: test-results/e2e
                   retention-days: 30
