--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -30,8 +30,8 @@ jobs:
                   E2E_CLERK_RESEARCHER_EMAIL: ${{ secrets.E2E_CLERK_RESEARCHER_EMAIL }}
                   E2E_CLERK_RESEARCHER_PASSWORD: ${{ secrets.E2E_CLERK_RESEARCHER_PASSWORD }}
                   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-                  E2E_CLERK_MEMBER_EMAIL: ${{ secrets.E2E_CLERK_MEMBER_EMAIL }}
-                  E2E_CLERK_MEMBER_PASSWORD: ${{ secrets.E2E_CLERK_MEMBER_PASSWORD }}
+                  E2E_CLERK_REVIEWER_EMAIL: ${{ secrets.E2E_CLERK_MEMBER_EMAIL }}
+                  E2E_CLERK_REVIEWER_PASSWORD: ${{ secrets.E2E_CLERK_MEMBER_PASSWORD }}
                   E2E_CLERK_ADMIN_EMAIL: ${{ secrets.E2E_CLERK_ADMIN_EMAIL }}
                   E2E_CLERK_ADMIN_PASSWORD: ${{ secrets.E2E_CLERK_ADMIN_PASSWORD }}
             - name: Run Specs
@@ -46,7 +46,7 @@ jobs:
               with:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
                   base-summary-filename: base-summary.json
-                  coverage-filename: tests/coverage/code-coverage/merged/coverage-summary.json
+                  coverage-filename: tmp/coverage/code-coverage/merged/coverage-summary.json
             - name: Test build
               run: |
                   echo NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }} > .env
