--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -25,7 +25,17 @@ jobs:
             - name: Run docker compose
               run: docker compose up postgres mgmnt-app --wait --detach --wait-timeout 60
               env:
+                  NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+                  CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
+                  E2E_CLERK_RESEARCHER_EMAIL: ${{ secrets.E2E_CLERK_RESEARCHER_EMAIL }}
+                  E2E_CLERK_RESEARCHER_PASSWORD: ${{ secrets.E2E_CLERK_RESEARCHER_PASSWORD }}
                   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+                  E2E_CLERK_MEMBER_EMAIL: ${{ secrets.E2E_CLERK_MEMBER_EMAIL }}
+                  E2E_CLERK_MEMBER_PASSWORD: ${{ secrets.E2E_CLERK_MEMBER_PASSWORD }}
+                  E2E_CLERK_REVIEWER_EMAIL: ${{ secrets.E2E_CLERK_MEMBER_EMAIL }}
+                  E2E_CLERK_REVIEWER_PASSWORD: ${{ secrets.E2E_CLERK_MEMBER_PASSWORD }}
+                  E2E_CLERK_ADMIN_EMAIL: ${{ secrets.E2E_CLERK_ADMIN_EMAIL }}
+                  E2E_CLERK_ADMIN_PASSWORD: ${{ secrets.E2E_CLERK_ADMIN_PASSWORD }}
             - name: Run Specs
               run: docker compose exec mgmnt-app npm run ci
               env:
@@ -34,6 +44,8 @@ jobs:
                   E2E_CLERK_RESEARCHER_EMAIL: ${{ secrets.E2E_CLERK_RESEARCHER_EMAIL }}
                   E2E_CLERK_RESEARCHER_PASSWORD: ${{ secrets.E2E_CLERK_RESEARCHER_PASSWORD }}
                   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+                  E2E_CLERK_MEMBER_EMAIL: ${{ secrets.E2E_CLERK_MEMBER_EMAIL }}
+                  E2E_CLERK_MEMBER_PASSWORD: ${{ secrets.E2E_CLERK_MEMBER_PASSWORD }}
                   E2E_CLERK_REVIEWER_EMAIL: ${{ secrets.E2E_CLERK_MEMBER_EMAIL }}
                   E2E_CLERK_REVIEWER_PASSWORD: ${{ secrets.E2E_CLERK_MEMBER_PASSWORD }}
                   E2E_CLERK_ADMIN_EMAIL: ${{ secrets.E2E_CLERK_ADMIN_EMAIL }}
