--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -47,13 +47,13 @@ jobs:
               run: echo PLAYWRIGHT_VERSION=$(cat package.json | jq -r '.devDependencies."@playwright/test"' || 'latest') >> $GITHUB_ENV
 
             - name: Cache playwright binaries
-              uses: actions/cache@v3
+              uses: actions/cache@v4
               id: playwright-cache
               with:
                   path: |
                       ~/.cache/ms-playwright
                   key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
-
+                  restore-keys: ${{ runner.os }}-playwright-
             - name: npm install
               run: npm ci
 
