--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
         "@types/minimist": "^1.2.5",
         "@types/react": "19.0.10",
         "@vitejs/plugin-react": "^4.3.4",
+        "aws-sdk-client-mock": "^4.1.0",
         "dotenv": "*",
         "eslint": "^9.20.1",
         "eslint-config-next": "*",
