--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ yarn-error.log*
 .eslintcache
 package-lock.json
 tests/coverage/
+tests/.auth
 playwright-report/
 src/styles/generated
 ./tests/fixtures/temp/large-file
