--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ yarn-error.log*
 .eslintcache
 package-lock.json
 tests/coverage/
-tests/.auth
+tests/.auth/*
 playwright-report/
 src/styles/generated
 ./tests/fixtures/temp/large-file
