--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "react-icons": "^5.5.0",
         "remeda": "^2.20.2",
         "server-only": "^0.0.1",
+        "si-encryption": "github:safeinsights/encryption#results-decrypt",
         "uuid": "^11.0.5",
         "zod": "^3.24.2"
     },
