--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -19,6 +19,7 @@ jobs:
               run: npm ci
             - name: npm run checks
               run: npm run checks
+
     test:
         timeout-minutes: 15
         runs-on: ubuntu-latest
@@ -95,13 +96,26 @@ jobs:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
                   base-summary-filename: base-summary.json
                   coverage-filename: test-results/coverage/coverage-summary.json
-            - name: Test build
-              run: |
-                  echo NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }} > .env
-                  npm run build
+
             - uses: actions/upload-artifact@v4
               if: failure()
               with:
                   name: playwright-report
                   path: test-results/e2e
                   retention-days: 30
+
+    build:
+        timeout-minutes: 15
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: 22
+                  cache: 'npm'
+            - name: npm install
+              run: npm ci
+            - name: Test build
+              run: |
+                  echo NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }} > .env
+                  npm run build
