--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
         "react-icons": "^5.5.0",
         "remeda": "^2.21.0",
         "server-only": "^0.0.1",
-        "si-encryption": "github:safeinsights/encryption#binary-keys",
+        "si-encryption": "github:safeinsights/encryption",
         "uuid": "^11.1.0",
         "zod": "^3.24.2"
     },
