--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -24,6 +24,8 @@ jobs:
     test:
         timeout-minutes: 15
         runs-on: ubuntu-latest
+        container:
+            image: mcr.microsoft.com/playwright:v1.34.3-jammy
         services:
             db:
                 image: postgres:15
@@ -55,24 +57,24 @@ jobs:
               with:
                   node-version: 22
                   cache: 'npm'
-            - name: Get installed Playwright version
-              shell: bash
-              run: echo PLAYWRIGHT_VERSION=$(cat package.json | jq -r '.devDependencies."@playwright/test"' || 'latest') >> $GITHUB_ENV
+#            - name: Get installed Playwright version
+#              shell: bash
+#              run: echo PLAYWRIGHT_VERSION=$(cat package.json | jq -r '.devDependencies."@playwright/test"' || 'latest') >> $GITHUB_ENV
 
-            - name: Cache playwright binaries
-              uses: actions/cache@v4
-              id: playwright-cache
-              with:
-                  path: |
-                      ~/.cache/ms-playwright
-                  key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
-                  restore-keys: ${{ runner.os }}-playwright-
+#            - name: Cache playwright binaries
+#              uses: actions/cache@v4
+#              id: playwright-cache
+#              with:
+#                  path: |
+#                      ~/.cache/ms-playwright
+#                  key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
+#                  restore-keys: ${{ runner.os }}-playwright-
             - name: npm install
               run: npm ci
 
-            - shell: bash
-              if: steps.playwright-cache.outputs.cache-hit != 'true'
-              run: npx playwright install --with-deps
+#            - shell: bash
+#              if: steps.playwright-cache.outputs.cache-hit != 'true'
+#              run: npx playwright install --with-deps
 
             - name: provision db
               run: npm run db:migrate
@@ -82,6 +84,9 @@ jobs:
 
             - name: npm run test:unit
               run: npm run test:unit
+            - name: Run changed Playwright tests
+              run: npx playwright test --only-changed=$GITHUB_BASE_REF
+              if: github.event_name == 'pull_request'
             - name: npm run test:e2e
               run: npm run test:e2e
             - name: npm run test:coverage
