--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -55,24 +55,24 @@ jobs:
               with:
                   node-version: 22
                   cache: 'npm'
-            #            - name: Get installed Playwright version
-            #              shell: bash
-            #              run: echo PLAYWRIGHT_VERSION=$(cat package.json | jq -r '.devDependencies."@playwright/test"' || 'latest') >> $GITHUB_ENV
+            - name: Get installed Playwright version
+              shell: bash
+              run: echo PLAYWRIGHT_VERSION=$(cat package.json | jq -r '.devDependencies."@playwright/test"' || 'latest') >> $GITHUB_ENV
 
-            #            - name: Cache playwright binaries
-            #              uses: actions/cache@v4
-            #              id: playwright-cache
-            #              with:
-            #                  path: |
-            #                      ~/.cache/ms-playwright
-            #                  key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
-            #                  restore-keys: ${{ runner.os }}-playwright-
+            - name: Cache playwright binaries
+              uses: actions/cache@v4
+              id: playwright-cache
+              with:
+                  path: |
+                      ~/.cache/ms-playwright
+                  key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
+                  restore-keys: ${{ runner.os }}-playwright-
             - name: npm install
               run: npm ci
 
-            #            - shell: bash
-            #              if: steps.playwright-cache.outputs.cache-hit != 'true'
-            #              run: npx playwright install --with-deps
+            - shell: bash
+              if: steps.playwright-cache.outputs.cache-hit != 'true'
+              run: npx playwright install --with-deps
 
             - name: provision db
               run: npm run db:migrate
@@ -80,14 +80,10 @@ jobs:
             - name: start NextJS server
               run: npm run dev &
 
-            - name: Run Playwright tests
-              uses: docker://mcr.microsoft.com/playwright:v1.51.1-jammy
-              with:
-                  args: npx playwright test
-
-            - name: Run unit tests
+            - name: npm run test:unit
               run: npm run test:unit
-
+            - name: npm run test:e2e
+              run: npm run test:e2e
             - name: npm run test:coverage
               run: npm run test:coverage
 
