--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,6 @@ E2E_CLERK_RESEARCHER_PASSWORD=XXXX
 E2E_CLERK_MEMBER_EMAIL=si-member-tester-XXX@XXX
 E2E_CLERK_MEMBER_PASSWORD=XXXX
 ALWAYS_CREATE_ECR=f
-SIMULATE_RESULTS_UPLOAD=f
+SIMULATE_IMAGE_BUILD=t
 USE_S3_STORAGE=f
 DEBUG=none
